--- a/airbean-kim/src/styles/landing.css
+++ b/airbean-kim/src/styles/landing.css
@@ -1,30 +1,36 @@
-.wrapper {
+#landing-wrap {
+    height: 100%;
+    width: 100%;
     display: flex;
-    justify-content: center;
-    text-align: center;
-    height: 100vh;
     flex-direction: column;
+  }
+
+#svg-wrap {
     background-color: #38846D;
-    width: 375px;
-}
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+  }
 
-.wrapper a {
-    text-decoration: none;
-    color: black;
-}
+  #svg-left {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    height: 100%;
+  }
 
-
-h1 {
-    font-family: 'Rufina', serif;
-    font-size: 42px;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 52px;
-    letter-spacing: 0em;
-    text-align: center;
-    
-}
-
-.hero-text {
-    width: 10rem;
-}
+  #svg-right {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    height: 100%;
+  }
+  
+  #svg-center {
+    width: 14em;
+  }
