--- a/airbean-kim/src/styles/landing.css
+++ b/airbean-kim/src/styles/landing.css
@@ -1,11 +1,11 @@
-#landing-wrap {
+.landing-wrap {
     height: 100%;
     width: 100%;
     display: flex;
     flex-direction: column;
   }
 
-#svg-wrap {
+.svg-wrap {
     background-color: #38846D;
     width: 100%;
     height: 100vh;
@@ -15,7 +15,7 @@
     align-items: center;
   }
 
-  #svg-left {
+  .svg-left {
     position: absolute;
     top: 0;
     left: 0;
@@ -23,14 +23,14 @@
     height: 100%;
   }
 
-  #svg-right {
+  .svg-right {
     position: absolute;
     top: 0;
     right: 0;
     bottom: 0;
     height: 100%;
   }
-  
-  #svg-center {
+
+  .svg-center {
     width: 14em;
   }
